# aiops-deep-agents

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ops_manager.py  pyproject.toml  subagents.yaml
skills/common/log-analysis/: SKILL.md
skills/kubernetes/troubleshooting/: SKILL.md
skills/linux/diagnostics/: SKILL.md
skills/networking-dns/: SKILL.md
skills/networking/layer2/: SKILL.md
skills/networking/layer3/: SKILL.md
